# luna-soc

./: .gitignore  .gitmodules
applets/selftest/: Makefile  cmd.sh  hyper.py  out.vcd  psram.c  selftest.c  selftest.ld  tiliqua.py  top.py  uart.c  ulpi.c
examples/hello-rust/: Cargo.toml  eurorack_pmod.py  lxvid.v  out.vcd  psram.py  tiliqua.py  top.py
examples/hello-rust/.cargo/: flash.sh
examples/hello-rust/firmware/src/: log.rs  main.rs
examples/hello-rust/lunasoc-pac/: Cargo.toml
examples/hello-rust/src/: main.rs
luna_soc/: top_level_cli.py
luna_soc/gateware/csr/: hyperram.py  sram.py
luna_soc/generate/: genrust.py  gensvd.py
lunasoc-hal/.cargo/: config.toml
